--- a/adapter/common/net/wifi/net_wifi.gni
+++ b/adapter/common/net/wifi/net_wifi.gni
@@ -21,14 +21,14 @@ adapter_wifi_deps = []
 
 if (defined(ohos_lite) ||
     (defined(device_name) && device_name == "qemu-arm-linux")) {
-  if (enable_lnn_net) {
+  if (dsoftbus_standard_feature_lnn_net) {
     adapter_wifi_src += [
       "$softbus_adapter_wifi_path/common/softbus_wifi_api_adapter_virtual.c",
     ]
     adapter_wifi_inc += [ "$softbus_adapter_wifi_path/include" ]
   }
 } else {
-  if (enable_lnn_net) {
+  if (dsoftbus_standard_feature_lnn_net) {
     adapter_wifi_src +=
         [ "$softbus_adapter_wifi_path/common/softbus_wifi_api_adapter.c" ]
     adapter_wifi_inc += [ "$softbus_adapter_wifi_path/include" ]
