--- a/core/bus_center/lnn/disc_mgr/bus_center_disc_mgr.gni
+++ b/core/bus_center/lnn/disc_mgr/bus_center_disc_mgr.gni
@@ -13,7 +13,7 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-if (enable_lnn_net) {
+if (dsoftbus_standard_feature_lnn_net) {
   bus_center_disc_mgr_src = [
     "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/src/lnn_discovery_manager.c",
     "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/src/lnn_coap_discovery_impl.c",
