--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -22,7 +22,7 @@ enhanced = exec_script(
         [ "cd $native_source_path; if [ -f $dep_file ]; then echo true; else echo false; fi" ],
         "value")
 
-if (enable_lnn_net) {
+if (dsoftbus_standard_feature_lnn_net) {
   bus_center_hub_src = [
     "$core_lane_hub_path/common/src/lnn_lane_hub.c",
     "$core_lane_hub_path/lane_manager/src/lnn_lane_info.c",
@@ -30,7 +30,7 @@ if (enable_lnn_net) {
     "$core_lane_hub_path/lane_manager/src/lnn_lane_manager.c",
     "$core_lane_hub_path/lane_manager/src/lnn_smart_communication.c",
   ]
-  if (enable_lnn_time_sync) {
+  if (dsoftbus_standard_feature_lnn_time_sync) {
     bus_center_hub_src +=
         [ "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager.c" ]
     if (!enhanced) {
@@ -53,6 +53,6 @@ bus_center_hub_inc = [
   "$core_lane_hub_path/time_sync/include",
 ]
 bus_center_hub_deps = []
-if (enable_lnn_net && enable_lnn_time_sync && enhanced) {
+if (dsoftbus_standard_feature_lnn_net && dsoftbus_standard_feature_lnn_time_sync && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
 }
