--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -53,6 +53,7 @@ bus_center_hub_inc = [
   "$core_lane_hub_path/time_sync/include",
 ]
 bus_center_hub_deps = []
-if (dsoftbus_standard_feature_lnn_net && dsoftbus_standard_feature_lnn_time_sync && enhanced) {
+if (dsoftbus_standard_feature_lnn_net &&
+    dsoftbus_standard_feature_lnn_time_sync && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
 }
