update core/bus_center/utils/bus_center_utils.gni. Signed-off-by: yushihao <yushihao4@huawei.com>

--- a/core/bus_center/utils/bus_center_utils.gni
+++ b/core/bus_center/utils/bus_center_utils.gni
@@ -27,7 +27,8 @@ if (dsoftbus_standard_feature_lnn_net) {
     "$core_bus_center_utils_path/src/lnn_state_machine.c",
   ]
 }
-if (dsoftbus_standard_feature_lnn_net || dsoftbus_standard_feature_lnn_meta_node) {
+if (dsoftbus_standard_feature_lnn_net ||
+    dsoftbus_standard_feature_lnn_meta_node) {
   bus_center_utils_src += [
     "$core_bus_center_utils_path/src/lnn_file_utils.c",
     "$core_bus_center_utils_path/src/lnn_network_id.c",
