--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -29,7 +29,7 @@ declare_args() {
 
   dsoftbus_standard_feature_lnn_net = true
   dsoftbus_standard_feature_lnn_time_sync = true
-  enable_lnn_heartbeat = true
+  dsoftbus_standard_feature_lnn_heartbeat = true
   dsoftbus_standard_feature_lnn_meta_node = true
   dsoftbus_standard_feature_qos = true
 
