Revert "Temporary Offline Enhancements"
This reverts commit 1a37b2f277f331dbaffbb6f56aba785f98510c94.

Signed-off-by: zgit2021 <zhaowenqiang14@huawei.com>
Change-Id: I7475c47fb6b685c351b93903a54382c0a9ba072f

--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -17,7 +17,10 @@ core_lane_hub_path = "$dsoftbus_root_path/core/bus_center/lnn/lane_hub"
 
 native_source_path = rebase_path("$dsoftbus_root_path")
 dep_dir = "dsoftbus_enhance/core/bus_center/lnn/lane_hub"
-enhanced = false
+enhanced = exec_script(
+        "$dsoftbus_root_path/run_shell_cmd.py",
+        [ "cd $native_source_path; if [ -d $dep_dir ]; then echo true; else echo false; fi" ],
+        "value")
 
 if (dsoftbus_standard_feature_lnn_net) {
   bus_center_hub_src = [
