--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -22,6 +22,14 @@ enhanced = exec_script(
         [ "cd $native_source_path; if [ -d $dep_dir ]; then echo true; else echo false; fi" ],
         "value")
 
+bus_center_hub_inc = [
+  "$core_lane_hub_path/common/include",
+  "$core_lane_hub_path/lane_manager/include",
+  "$core_lane_hub_path/time_sync/include",
+  "$core_lane_hub_path/heartbeat/include/",
+]
+bus_center_hub_deps = []
+
 if (dsoftbus_standard_feature_lnn_net) {
   bus_center_hub_src = [
     "$core_lane_hub_path/common/src/lnn_lane_hub.c",
@@ -42,6 +50,8 @@ if (dsoftbus_standard_feature_lnn_net) {
         [ "$core_lane_hub_path/time_sync/src/lnn_time_sync_manager_virtual.c" ]
   }
   if (dsoftbus_standard_feature_lnn_heartbeat) {
+    bus_center_hub_inc +=
+        [ "$dsoftbus_core_path/connection/p2p/common/include/p2plink_type.h" ]
     bus_center_hub_src += [
       "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_strategy.c",
       "$core_lane_hub_path/heartbeat/src/lnn_heartbeat_manager.c",
@@ -64,14 +74,6 @@ if (dsoftbus_standard_feature_lnn_net) {
   ]
 }
 
-bus_center_hub_inc = [
-  "$core_lane_hub_path/common/include",
-  "$core_lane_hub_path/lane_manager/include",
-  "$core_lane_hub_path/time_sync/include",
-  "$core_lane_hub_path/heartbeat/include/",
-]
-
-bus_center_hub_deps = []
 if (dsoftbus_standard_feature_lnn_net &&
     dsoftbus_standard_feature_lnn_time_sync && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
