bugfix: use global_parts_info.communication_wifi_standard to check if wifi is supported.
1）通过global_parts_info.communication_wifi_standard判断当前产品是否支持wifi决定是否走虚拟适配层。

Signed-off-by: handyohos <zhangxiaotian@huawei.com>
Change-Id: I32aac61f79669d30e84cdd09895c3e0f262cb269

--- a/adapter/common/net/wifi/net_wifi.gni
+++ b/adapter/common/net/wifi/net_wifi.gni
@@ -20,7 +20,8 @@ adapter_wifi_inc = []
 adapter_wifi_deps = []
 
 if (defined(ohos_lite) ||
-    (defined(device_name) && device_name == "qemu-arm-linux")) {
+    (defined(global_parts_info) &&
+     !defined(global_parts_info.communication_wifi_standard))) {
   if (dsoftbus_standard_feature_lnn_net) {
     adapter_wifi_src += [
       "$softbus_adapter_wifi_path/common/softbus_wifi_api_adapter_virtual.c",
