权限文件修改 Signed-off-by: yushihao <yushihao4@huawei.com>

--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -2,8 +2,8 @@
     "services" : [{
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
-            "uid" : "root",
-            "gid" : ["root", "shell"]
+            "uid" : "system",
+            "gid" : ["system", "shell"]
         }
     ]
 }
