sync release code
Signed-off-by: jeosif <liubao6@huawei.com>

--- a/tests/core/connection/manager/BUILD.gn
+++ b/tests/core/connection/manager/BUILD.gn
@@ -21,6 +21,8 @@ ohos_unittest("softbus_conn_manager_test") {
 
   if (dsoftbus_standard_feature_conn_br == true) {
     defines = [ "connection_enable_br_test" ]
+  } else {
+    defines = []
   }
 
   if (dsoftbus_standard_feature_conn_ble == true) {
