--- a/core/bus_center/lnn/net_ledger/net_ledger.gni
+++ b/core/bus_center/lnn/net_ledger/net_ledger.gni
@@ -34,5 +34,6 @@ bus_center_ledger_inc = [
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
   "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
+  "$dsoftbus_root_path/core/bus_center/utils/include",
 ]
 bus_center_ledger_deps = []
