Adapt nStack DFinder with HiLog for DFX
Signed-off-by: chenzelin <chenzelin1@huawei.com>

--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -14,7 +14,7 @@
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 NSTACKX_ROOT = "//foundation/communication/dsoftbus/components/nstackx"
-
+cflags = [ "-DENABLE_DFINDER_HILOG" ]
 if (defined(ohos_lite)) {
   import("//build/lite/config/component/lite_component.gni")
   if (ohos_kernel_type == "liteos_a") {
@@ -34,7 +34,7 @@ if (defined(ohos_lite)) {
   }
   shared_library("nstackx_util.open") {
     if (ohos_kernel_type == "liteos_a") {
-      cflags = [
+      cflags += [
         "-Wall",
         "-D_GNU_SOURCE",
         "-DNSTACKX_WITH_LITEOS",
@@ -49,6 +49,7 @@ if (defined(ohos_lite)) {
         "platform/liteos",
         "$NSTACKX_ROOT/nstackx_core/",
         "//third_party/bounds_checking_function/include/",
+        "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
       ]
       sources = [
         "core/nstackx_dev.c",
@@ -66,9 +67,12 @@ if (defined(ohos_lite)) {
         "platform/liteos/sys_timer.c",
         "platform/liteos/sys_util.c",
       ]
-      deps = [ "//third_party/mbedtls" ]
+      deps = [
+        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
+        "//third_party/mbedtls",
+      ]
     } else if (ohos_kernel_type == "linux") {
-      cflags = [
+      cflags += [
         "-Wall",
         "-DNSTACKX_WITH_HMOS_LINUX",
         "-DMBEDTLS_INCLUDED",
@@ -80,6 +84,7 @@ if (defined(ohos_lite)) {
         "platform/unix",
         "$NSTACKX_ROOT/nstackx_core/",
         "//third_party/bounds_checking_function/include/",
+        "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/",
       ]
       sources = [
         "core/nstackx_dev.c",
@@ -98,6 +103,7 @@ if (defined(ohos_lite)) {
         "platform/unix/sys_util.c",
       ]
       deps = [
+        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
         "//third_party/mbedtls",
         "//third_party/mbedtls:mbedtls_shared",
       ]
@@ -115,7 +121,7 @@ if (defined(ohos_lite)) {
   }
 
   ohos_shared_library("nstackx_util.open") {
-    cflags = [
+    cflags += [
       "-Wall",
       "-DMBEDTLS_INCLUDED",
       "-DNSTACKX_WITH_HMOS_LINUX",
@@ -127,6 +133,7 @@ if (defined(ohos_lite)) {
       "platform/unix",
       "$NSTACKX_ROOT/nstackx_core/",
       "//utils/native/base/include/",
+      "//base/hiviewdfx/hilog/interfaces/native/innerkits/",
     ]
     sources = [
       "core/nstackx_dev.c",
@@ -149,6 +156,7 @@ if (defined(ohos_lite)) {
       "//third_party/mbedtls",
       "//utils/native/base:utilsecurec_shared",
     ]
+    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     public_configs = [ ":nstackx_util_header" ]
     part_name = "dsoftbus_standard"
     subsystem_name = "communication"
