--- a/adapter/default_config/feature_config/standard/config.gni
+++ b/adapter/default_config/feature_config/standard/config.gni
@@ -32,6 +32,7 @@ declare_args() {
   dsoftbus_standard_feature_lnn_heartbeat = true
   dsoftbus_standard_feature_lnn_meta_node = true
   dsoftbus_standard_feature_qos = true
+  dsoftbus_standard_feature_lnn_wifiservice_dependence = false
 
   dsoftbus_standard_feature_build_shared_sdk = true
 }
