--- a/sdk/transmission/ipc/trans_ipc_sdk.gni
+++ b/sdk/transmission/ipc/trans_ipc_sdk.gni
@@ -19,6 +19,7 @@ if (defined(ohos_lite)) {
     trans_ipc_proxy_sdk_inc += [
       "$dsoftbus_root_path/core/transmission/trans_channel/manager/include",
       "$dsoftbus_root_path/core/transmission/session/include",
+      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
       "$dsoftbus_root_path/core/bus_center/utils/include",
     ]
     trans_ipc_proxy_sdk_src =
